2007-03-20  Graham Cobb  <g+770@cobb.uk.net>

	* README.gpe: Create README.gpe to describe this component
	* libmimedir-0.4.0-duration-wkst.patch (from OE but rewritten):
	add WKST and fix DURATION parsing
	This fixes GPE bug 7	

2006-12-19  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2006-08-15  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* mimedir/mimedir-attribute.c (mimedir_attribute_get_value_text_list):
	CATEGORY_LIST only returned one element. Patch by Martin Felis.

2006-02-09  Clytie Siddall  <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.

2006-01-01  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* configure.in: Also bump MIMEDIR_*_VERSION. (Thanks, Florian Boor)

	Based on a patch by Olivier Berger:
	* mimedir/mimedir-attribute (char_to_int): Handle '0' to '9'. Renamed
	to base64_char_to_int. Removed the error parameter.
	(int_to_char): Renamed to base64_int_to_char. Removed the
	error parameter.
	(base64_check): New function.
	(base64_decode): Cleaned up.
	(mimedir_attribute_internal_append_parameter): Recognize "base64" as
	alternative Base64 identifier.
	(get_attribute_string): Handle Base64.

2005-11-26  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* configure.in: Bumped version number to 0.4.0.
	* mimedir/mimedir-vcomponent.c (mimedir_vcomponent_parse_attribute):
	Parse LAST-MODIFIED field with non-UTC time value. (Martin Felis)

2005-11-03  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* bin/vcard-dump.c (print_vcard): Split function out of main().
	* mimedir/mimedir-vcomponent.c: Added support for LAST-MODIFIED.
	(Martin Felis); plugged some memory leaks.

2005-10-08  Ilkka Tuohela  <hile@iki.fi>

	* For translators: fixed invalid original string in
	  mimedir/mimedir-recurrance.c (numer -> number)

2005-09-11  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* mimedir/mimedir-vcard-address.c
	(mimedir_vcard_address_set_from_attribute):
	* mimedir/mimedir-vcard-email.c